<?xml version="1.0"?>

<package format="2">

  <name>lio_imm</name>
  <version>1.1.1</version>
  <description>LIO-IMM: An Effective LiDAR-Inertial Odometry Using Interacting Multiple Models for Localization and Mapping</description>

  <maintainer email="anguyenduy@unr.edu">An D. Nguyen </maintainer>

  <author>An D Nguyen</author>

  <license>UNR</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_ros</depend>

  <export>
  </export>

</package>
